--- a/package.json
+++ b/package.json
@@ -1,9 +1,23 @@
 {
+  "name": "auth0",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "express-session": "^1.18.1",
-    "passport": "^0.7.0",
-    "passport-auth0": "^1.4.4"
+    "express-jwt": "^7.7.8",
+    "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.1.0",
+    "nodemon": "^3.1.7"
   },
   "type": "module"
 }
